00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
---
apiVersion: v1
kind: Namespace
metadata:
  name: atsproof
---
apiVersion: v1
kind: Namespace
metadata:
  name: jobs
---
apiVersion: v1
kind: Namespace
metadata:
  name: amae
