service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express
spec:
  selector:
    app: express
  type: ClusterIP
  ports:
  - name: express
    port: 80
    targetPort: 80
    protocol: TCP
